--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Javascript -->
         <script src="js/jquery/jquery-3.4.1.min.js"></script>
         <script src="js/bootstrap/bootstrap.min.js"></script>
-        <script src="js/fb.js"></script>
+        <script src="js/instagram.js"></script>
     </head>
     <body>
         <header>
@@ -62,7 +62,7 @@
         </section>
         <section id="services">
             <h2>Services</h2>
-            <article>
+            <article class="littleBox">
                 <ul>
                     <li>
                         <i class="fas fa-music"></i> Psychological attention
@@ -82,10 +82,13 @@
         <section id="team">
             <h2>Our Team</h2>
             <h3>These are the people living the mupsychology experience.</h3>
+            <article>
+                <ul id="galeria-instagram"></ul>
+            </article>
         </section>
         <section id="contact">
             <h2>Contact us</h2>
-            <form id="contactUsForm">
+            <form id="contactUsForm" class="littleBox">
                 <div class="form-group">
                     <label for="contactName">*Name:</label>
                     <input type="text" aria-required="true" class="form-control" id="contactName" aria-describedby="nameHelp" placeholder="Enter Name">
@@ -105,10 +108,7 @@
             </form>
         </section>
         <footer>
-            <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
-                    
-            <div id="status">
-            </div>
+            <!--fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button-->
             <div>Copiright 2019 - All rights reserved</div>
         </footer>
     </body>
