MB - Intagram pictures added and circle style applied

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         <section id="team">
             <h2>Our Team</h2>
             <h3>These are the people living the mupsychology experience.</h3>
-            <article>
-                <ul id="galeria-instagram"></ul>
+            <article class="mediumBox">
+                <ul id="instagramPics"></ul>
             </article>
         </section>
         <section id="contact">
